# crud-django

./: README.md  pyproject.toml
crudDjango/: asgi.py  settings.py  urls.py  wsgi.py
livraria/: forms.py  models.py  urls.py  views.py
livraria/migrations/: 0001_initial.py  0002_alter_book_created_at.py
livraria/templates/: add_book.html  base.html  book.html  home.html  navbar.html  register.html  update_book.html
